--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,16 @@
             "email": "philip@philiplb.de"
         }
     ],
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/philiplb/sphpdox"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/ptlis/MetaYaml"
+        }
+    ],
     "require": {
         "php": ">=7.1.3",
         "silex/silex": "^2.2, !=2.2.3",
@@ -34,5 +44,7 @@
         "branch-alias": {
             "dev-master": "0.1.x-dev"
         }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
