--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "require": {
         "php": ">=7.1.3",
         "silex/silex": "^2.2, !=2.2.3",
-        "philiplb/crudlex": "0.14.x-dev"
+        "philiplb/crudlex": "0.14.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~7.2",
@@ -34,5 +34,7 @@
         "branch-alias": {
             "dev-master": "0.2.x-dev"
         }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
